--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/anithauddisa/5g3prjct/blob/main/assignments/Assignment_01.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "548b84c2-e24f-4a12-98bb-5e7bd5ec86bd",
       "metadata": {
         "id": "548b84c2-e24f-4a12-98bb-5e7bd5ec86bd"
@@ -33,44 +43,12 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "7RXrXvRcmOjy"
-      },
-      "id": "7RXrXvRcmOjy"
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "n9EgAB2VmObr"
-      },
-      "id": "n9EgAB2VmObr"
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "g1I1IidRmcP6"
-      },
-      "id": "g1I1IidRmcP6"
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "b6a-NpdfmcJN"
-      },
-      "id": "b6a-NpdfmcJN"
-    },
-    {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "id": "502e1d87-2fdd-4588-a330-2af21268215e",
       "metadata": {
         "id": "502e1d87-2fdd-4588-a330-2af21268215e",
-        "outputId": "756f2eb7-6f3b-42e8-a7ad-ca832bfdfe38",
+        "outputId": "ec10e296-8ba9-4fe7-d564-91c5840170f3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -87,9 +65,7 @@
       "source": [
         "# Write a Python program to declare a variable x with the value 10 and print its type.\n",
         "x=10\n",
-        "print(type(x))\n",
-        "\n",
-        "\n"
+        "print(type(x))"
       ]
     },
     {
@@ -1042,7 +1018,8 @@
       "version": "3.12.6"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
