--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -48,7 +48,7 @@
       "id": "502e1d87-2fdd-4588-a330-2af21268215e",
       "metadata": {
         "id": "502e1d87-2fdd-4588-a330-2af21268215e",
-        "outputId": "ec10e296-8ba9-4fe7-d564-91c5840170f3",
+        "outputId": "372657e6-6049-4557-8518-471b6202e185",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -70,26 +70,62 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
       "metadata": {
-        "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7"
+        "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
+        "outputId": "497e0120-b0b9-4e7e-cae1-88195b0b771c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "30\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to declare three variables a = 5, b = 10, and c = 15, and print their sum."
+        "# Write a Python program to declare three variables a = 5, b = 10, and c = 15, and print their sum.\n",
+        "a=5\n",
+        "b=10\n",
+        "c=15\n",
+        "print(a+b+c)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc",
       "metadata": {
-        "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc"
+        "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc",
+        "outputId": "2c641f9b-60ba-4203-b4e7-205f71c753aa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'int'>\n",
+            "<class 'float'>\n",
+            "<class 'str'>\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program that checks and prints the type of a variable (e.g., int, float, str, etc.)."
+        "# Write a Python program that checks and prints the type of a variable (e.g., int, float, str, etc.).\n",
+        "a=10\n",
+        "b=5.5\n",
+        "c=\"anitha\"\n",
+        "print(type(a))\n",
+        "print(type(b))\n",
+        "print(type(c))"
       ]
     },
     {
