--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -48,10 +48,10 @@
       "id": "502e1d87-2fdd-4588-a330-2af21268215e",
       "metadata": {
         "id": "502e1d87-2fdd-4588-a330-2af21268215e",
-        "outputId": "372657e6-6049-4557-8518-471b6202e185",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "372657e6-6049-4557-8518-471b6202e185"
       },
       "outputs": [
         {
@@ -74,10 +74,10 @@
       "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
       "metadata": {
         "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
-        "outputId": "497e0120-b0b9-4e7e-cae1-88195b0b771c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "497e0120-b0b9-4e7e-cae1-88195b0b771c"
       },
       "outputs": [
         {
@@ -102,10 +102,10 @@
       "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc",
       "metadata": {
         "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc",
-        "outputId": "2c641f9b-60ba-4203-b4e7-205f71c753aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2c641f9b-60ba-4203-b4e7-205f71c753aa"
       },
       "outputs": [
         {
@@ -130,14 +130,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67",
       "metadata": {
-        "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67"
+        "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6f2fac1f-5bee-4a3a-94c3-9c01c1dcf84e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "addtion: 8\n",
+            "substraction: 2\n",
+            "multiplecation: 15\n",
+            "division: 1.6666666666666667\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to perform addition, subtraction, multiplication, and division on two numbers. (User input is required for the numbers)"
+        "# Write a Python program to perform addition, subtraction, multiplication, and division on two numbers. (User input is required for the numbers)\n",
+        "a=5\n",
+        "b=3\n",
+        "print(\"addtion:\",a+b)\n",
+        "print(\"substraction:\",a-b)\n",
+        "print(\"multiplecation:\",a*b)\n",
+        "print(\"division:\",a/b)"
       ]
     },
     {
