--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -163,110 +163,273 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "629435bd-6bfa-44de-91d9-3b2937713257",
       "metadata": {
-        "id": "629435bd-6bfa-44de-91d9-3b2937713257"
+        "id": "629435bd-6bfa-44de-91d9-3b2937713257",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "353a50cd-3e28-43e8-dcc2-924737683acc"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Integer values: [1, 2, 3]\n",
+            "Float values: [1.0, 2.0, 3.0]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to convert a string \"123\" to an integer and a float and print the results."
+        "# Write a Python program to convert a string \"123\" to an integer and a float and print the results.\n",
+        "input_string = \"1 2 3 \"\n",
+        "numbers = input_string.strip().split()\n",
+        "integers = [int(num) for num in numbers]\n",
+        "floats = [float(num) for num in numbers]\n",
+        "print(\"Integer values:\", integers)\n",
+        "print(\"Float values:\", floats)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "599421f1-51c1-4653-9d78-b007fcc6861b",
       "metadata": {
-        "id": "599421f1-51c1-4653-9d78-b007fcc6861b"
+        "id": "599421f1-51c1-4653-9d78-b007fcc6861b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f6a83bcc-063d-4c44-803e-43f1831ac72e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a string: hello\n",
+            "The first character is: h\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to print the first character of a given string. (User input for the string)"
+        "# Write a Python program to print the first character of a given string. (User input for the string)\n",
+        "user_input = input(\"Enter a string: \")\n",
+        "if user_input:\n",
+        "    print(\"The first character is:\", user_input[0])\n",
+        "else:\n",
+        "    print(\"The string is empty!\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9",
       "metadata": {
-        "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9"
+        "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b3887b3c-b963-4964-9956-9c39173111e3"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a string: uddisa anitha!!\n",
+            "The length of the string is: 15\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to print the length of a string. (User input for the string)"
+        "# Write a Python program to print the length of a string. (User input for the string)\n",
+        "user_input = input(\"Enter a string: \")\n",
+        "print(\"The length of the string is:\", len(user_input))\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "id": "65f44c33-618e-4337-a9d1-9de888c93a0a",
       "metadata": {
-        "id": "65f44c33-618e-4337-a9d1-9de888c93a0a"
+        "id": "65f44c33-618e-4337-a9d1-9de888c93a0a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "de7388bd-3283-472a-f4be-e2abc6ff3073"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a string: anitha12\n",
+            "The string contains characters other than alphabets.\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to check if a given string contains only alphabets."
+        "# Write a Python program to check if a given string contains only alphabets.\n",
+        "user_input = input(\"Enter a string: \")\n",
+        "if user_input.isalpha():\n",
+        "    print(\"The string contains only alphabets.\")\n",
+        "else:\n",
+        "    print(\"The string contains characters other than alphabets.\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "id": "37463128-2b51-4860-b6bf-40d3c03fbe84",
       "metadata": {
-        "id": "37463128-2b51-4860-b6bf-40d3c03fbe84"
+        "id": "37463128-2b51-4860-b6bf-40d3c03fbe84",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8876a4de-7c41-4062-cca3-6e06d8b0ccf5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the first string: anitha\n",
+            "Enter the second string: uddisa\n",
+            "The concatenated string is: anithauddisa\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to concatenate two strings. (User input for the strings)"
+        "# Write a Python program to concatenate two strings. (User input for the strings)\n",
+        "string1 = input(\"Enter the first string: \")\n",
+        "string2 = input(\"Enter the second string: \")\n",
+        "result = string1 + string2\n",
+        "print(\"The concatenated string is:\", result)\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "id": "b1c5d364-eccf-473a-b03a-ab15f3e917cf",
       "metadata": {
-        "id": "b1c5d364-eccf-473a-b03a-ab15f3e917cf"
+        "id": "b1c5d364-eccf-473a-b03a-ab15f3e917cf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4f953479-885b-4b4f-dd32-90f341ad9bba"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a string: abcdefgh\n",
+            "The substring 'abc' is found at index 0.\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to find the index of a substring \"abc\" in a string. (User input for the string)"
+        "# Write a Python program to find the index of a substring \"abc\" in a string. (User input for the string)\n",
+        "\n",
+        "user_input = input(\"Enter a string: \")\n",
+        "substring = \"abc\"\n",
+        "index = user_input.find(substring)\n",
+        "if index != -1:\n",
+        "    print(f\"The substring '{substring}' is found at index {index}.\")\n",
+        "else:\n",
+        "    print(f\"The substring '{substring}' is not found in the string.\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "id": "cc92afd9-ba4b-4934-a79d-f26825b4efc2",
       "metadata": {
-        "id": "cc92afd9-ba4b-4934-a79d-f26825b4efc2"
+        "id": "cc92afd9-ba4b-4934-a79d-f26825b4efc2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "95693ce3-ef1d-4276-e629-b98d460dbbf3"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a string: uddisa anitha\n",
+            "Uppercase version: UDDISA ANITHA\n",
+            "Lowercase version: uddisa anitha\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to convert a string to both uppercase and lowercase. (User input for the string)"
+        "# Write a Python program to convert a string to both uppercase and lowercase. (User input for the string)\n",
+        "user_input = input(\"Enter a string: \")\n",
+        "uppercase_string = user_input.upper()\n",
+        "lowercase_string = user_input.lower()\n",
+        "print(\"Uppercase version:\", uppercase_string)\n",
+        "print(\"Lowercase version:\", lowercase_string)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "id": "f24f79b3-da8b-44bf-8310-c68442e86e3e",
       "metadata": {
-        "id": "f24f79b3-da8b-44bf-8310-c68442e86e3e"
+        "id": "f24f79b3-da8b-44bf-8310-c68442e86e3e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a3841afd-895b-4bda-bd32-66a30d8791ae"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a string: anitha uddisa\n",
+            "Enter the character to count: a\n",
+            "The character 'a' appears 3 times in the string.\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to count how many times a particular character appears in a string. (User input for string and character)"
+        "# Write a Python program to count how many times a particular character appears in a string. (User input for string and character)\n",
+        "user_input = input(\"Enter a string: \")\n",
+        "character = input(\"Enter the character to count: \")\n",
+        "count = user_input.count(character)\n",
+        "print(f\"The character '{character}' appears {count} times in the string.\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "id": "f2e8f25c-5c34-44eb-b749-7cc4c100b9a8",
       "metadata": {
-        "id": "f2e8f25c-5c34-44eb-b749-7cc4c100b9a8"
+        "id": "f2e8f25c-5c34-44eb-b749-7cc4c100b9a8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "08ce8180-3c8b-43d4-c585-c74e39dfc8d4"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter your name: anitha uddisa\n",
+            "Hello, anitha uddisa, Good Morning!\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to take the user's name as input and print a personalized greeting. (Hello, username, Good Morning)"
+        "# Write a Python program to take the user's name as input and print a personalized greeting. (Hello, username, Good Morning)\n",
+        "username = input(\"Enter your name: \")\n",
+        "print(f\"Hello, {username}, Good Morning!\")"
       ]
     },
     {
