--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -434,26 +434,61 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "id": "189296cf-77e6-4f48-b010-77458da5bc9d",
       "metadata": {
-        "id": "189296cf-77e6-4f48-b010-77458da5bc9d"
+        "id": "189296cf-77e6-4f48-b010-77458da5bc9d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7fde03ec-bbb7-4b99-f0e4-81019482e556"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the first number: 12\n",
+            "Enter the second number: 10\n",
+            "The sum of 12.0 and 10.0 is: 22.0\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to take two numbers as input and print their sum."
+        "# Write a Python program to take two numbers as input and print their sum.\n",
+        "num1 = float(input(\"Enter the first number: \"))\n",
+        "num2 = float(input(\"Enter the second number: \"))\n",
+        "sum_result = num1 + num2\n",
+        "print(\"The sum of\", num1, \"and\", num2, \"is:\", sum_result)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "id": "0563b26c-0218-47b8-9035-98beb73b0931",
       "metadata": {
-        "id": "0563b26c-0218-47b8-9035-98beb73b0931"
+        "id": "0563b26c-0218-47b8-9035-98beb73b0931",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fa4131ed-8431-4cd3-86a0-61d1103efbf7"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter your name: anu\n",
+            "Enter your age: 18\n",
+            "Hello anu! You are 18 years old.\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to format and display a string containing the user's name and age. (User input required)"
+        "# Write a Python program to format and display a string containing the user's name and age. (User input required)\n",
+        "name = input(\"Enter your name: \")\n",
+        "age = int(input(\"Enter your age: \"))\n",
+        "print(f\"Hello {name}! You are {age} years old.\")"
       ]
     },
     {
@@ -475,6 +510,7 @@
       },
       "outputs": [],
       "source": [
+        "\n",
         "# Write a Python program that takes a number as input and checks whether it is positive, negative, or zero."
       ]
     },
