--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -1076,10 +1076,10 @@
       "id": "a0333c26-8e19-4c71-9722-d32cf8625ef6",
       "metadata": {
         "id": "a0333c26-8e19-4c71-9722-d32cf8625ef6",
-        "outputId": "6b119522-665d-47c4-a3de-b80851b2e177",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6b119522-665d-47c4-a3de-b80851b2e177"
       },
       "outputs": [
         {
@@ -1103,10 +1103,10 @@
       "id": "5a23046d-80b0-4f8d-a02f-4e3d833c0443",
       "metadata": {
         "id": "5a23046d-80b0-4f8d-a02f-4e3d833c0443",
-        "outputId": "bd367beb-f1c6-4d4c-80ed-d83a98a37f51",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bd367beb-f1c6-4d4c-80ed-d83a98a37f51"
       },
       "outputs": [
         {
@@ -1130,10 +1130,10 @@
       "id": "9939c2d2-90fd-4e80-81bc-227c72e60e37",
       "metadata": {
         "id": "9939c2d2-90fd-4e80-81bc-227c72e60e37",
-        "outputId": "159ae93d-ecbb-41fe-fed1-85855c640187",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "159ae93d-ecbb-41fe-fed1-85855c640187"
       },
       "outputs": [
         {
@@ -1157,10 +1157,10 @@
       "id": "aa287db8-057b-48d4-a6d8-18cc53eb7178",
       "metadata": {
         "id": "aa287db8-057b-48d4-a6d8-18cc53eb7178",
-        "outputId": "e918a7ea-270a-4943-c0c1-8e1b22a14912",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e918a7ea-270a-4943-c0c1-8e1b22a14912"
       },
       "outputs": [
         {
@@ -1185,10 +1185,10 @@
       "id": "da9ba926-0ab5-46e9-b66d-128088c3225b",
       "metadata": {
         "id": "da9ba926-0ab5-46e9-b66d-128088c3225b",
-        "outputId": "a9119f56-96c8-4f31-a45a-d8544efe8622",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a9119f56-96c8-4f31-a45a-d8544efe8622"
       },
       "outputs": [
         {
@@ -1216,10 +1216,10 @@
       "id": "9601b6e4-cb90-4e1f-87b4-38ed37076e0d",
       "metadata": {
         "id": "9601b6e4-cb90-4e1f-87b4-38ed37076e0d",
-        "outputId": "4b205dc7-7c53-4998-c7d1-1d008e0010c2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4b205dc7-7c53-4998-c7d1-1d008e0010c2"
       },
       "outputs": [
         {
@@ -1246,10 +1246,10 @@
       "id": "9d8e7311-81de-4da2-826c-c4dcad28ed9f",
       "metadata": {
         "id": "9d8e7311-81de-4da2-826c-c4dcad28ed9f",
-        "outputId": "3d41e698-4667-43f2-f4a9-5845ad620561",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3d41e698-4667-43f2-f4a9-5845ad620561"
       },
       "outputs": [
         {
@@ -1274,10 +1274,10 @@
       "id": "09e5121b-97b3-42e4-8025-f28f3470681b",
       "metadata": {
         "id": "09e5121b-97b3-42e4-8025-f28f3470681b",
-        "outputId": "98a39721-e992-4aad-b658-54ea5ec952a2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "98a39721-e992-4aad-b658-54ea5ec952a2"
       },
       "outputs": [
         {
@@ -1302,10 +1302,10 @@
       "id": "b774b741-e9a6-45db-8f00-e6d9b734d03a",
       "metadata": {
         "id": "b774b741-e9a6-45db-8f00-e6d9b734d03a",
-        "outputId": "53f6c1d4-51ea-43cd-eebe-3ebcd16a1491",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "53f6c1d4-51ea-43cd-eebe-3ebcd16a1491"
       },
       "outputs": [
         {
@@ -1332,10 +1332,10 @@
       "id": "5ce4fd2b-ab16-4b40-9ac2-d19c244d8d96",
       "metadata": {
         "id": "5ce4fd2b-ab16-4b40-9ac2-d19c244d8d96",
-        "outputId": "8731d51b-8443-4d96-bd2a-8235e2e465d1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8731d51b-8443-4d96-bd2a-8235e2e465d1"
       },
       "outputs": [
         {
@@ -1358,10 +1358,10 @@
       "id": "5c04f880-6e96-4ef4-9f4b-df21aae76ff1",
       "metadata": {
         "id": "5c04f880-6e96-4ef4-9f4b-df21aae76ff1",
-        "outputId": "cbced007-e785-4f05-d741-9a47335c5560",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cbced007-e785-4f05-d741-9a47335c5560"
       },
       "outputs": [
         {
@@ -1388,10 +1388,10 @@
       "id": "d5192acc-27f3-456e-9c72-3b276a587bf5",
       "metadata": {
         "id": "d5192acc-27f3-456e-9c72-3b276a587bf5",
-        "outputId": "af3181ca-db4b-470b-c384-3566cc5d245b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "af3181ca-db4b-470b-c384-3566cc5d245b"
       },
       "outputs": [
         {
@@ -1418,10 +1418,10 @@
       "id": "43f0a340-9407-4302-af7e-4e63db578bbf",
       "metadata": {
         "id": "43f0a340-9407-4302-af7e-4e63db578bbf",
-        "outputId": "1c78f19a-2e56-4103-e426-d1ce1ef397b0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1c78f19a-2e56-4103-e426-d1ce1ef397b0"
       },
       "outputs": [
         {
@@ -1449,10 +1449,10 @@
       "id": "46e96e29-2157-4b9f-bb24-0bd973eada9f",
       "metadata": {
         "id": "46e96e29-2157-4b9f-bb24-0bd973eada9f",
-        "outputId": "1f35b2b9-6ef2-4464-bc2d-badb607b50fe",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1f35b2b9-6ef2-4464-bc2d-badb607b50fe"
       },
       "outputs": [
         {
@@ -1482,10 +1482,10 @@
       "id": "d81a803b-fd80-403e-9ae3-680ef44a3d86",
       "metadata": {
         "id": "d81a803b-fd80-403e-9ae3-680ef44a3d86",
-        "outputId": "27469943-e86f-43ee-a638-30738253a2bc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "27469943-e86f-43ee-a638-30738253a2bc"
       },
       "outputs": [
         {
@@ -1513,10 +1513,10 @@
       "id": "7432174b-fe75-4371-b23a-e2c5d62edb15",
       "metadata": {
         "id": "7432174b-fe75-4371-b23a-e2c5d62edb15",
-        "outputId": "188c77cf-c412-428e-e89a-408267fcdaf4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "188c77cf-c412-428e-e89a-408267fcdaf4"
       },
       "outputs": [
         {
@@ -1546,10 +1546,10 @@
       "id": "000b3260-d91f-41f2-9729-4b0124f2c4d2",
       "metadata": {
         "id": "000b3260-d91f-41f2-9729-4b0124f2c4d2",
-        "outputId": "02b03bdf-f3b4-4a43-fb6e-1233d70eda57",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "02b03bdf-f3b4-4a43-fb6e-1233d70eda57"
       },
       "outputs": [
         {
@@ -1581,10 +1581,10 @@
       "id": "c4b1a942-818e-42c1-b742-1fabe80fca6d",
       "metadata": {
         "id": "c4b1a942-818e-42c1-b742-1fabe80fca6d",
-        "outputId": "505f7317-fa3f-49ac-de36-c759d3383522",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "505f7317-fa3f-49ac-de36-c759d3383522"
       },
       "outputs": [
         {
@@ -1616,10 +1616,10 @@
       "id": "a78f1070-3ff3-436a-8391-153f019f53cd",
       "metadata": {
         "id": "a78f1070-3ff3-436a-8391-153f019f53cd",
-        "outputId": "7e5487ce-9461-443e-cda1-d234482e5d09",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7e5487ce-9461-443e-cda1-d234482e5d09"
       },
       "outputs": [
         {
@@ -1654,10 +1654,10 @@
       "id": "fcba0267-8cc4-4e89-9e78-2d820916c177",
       "metadata": {
         "id": "fcba0267-8cc4-4e89-9e78-2d820916c177",
-        "outputId": "ad3ada0b-c3c1-44ab-f6b0-b4f50e7711c9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ad3ada0b-c3c1-44ab-f6b0-b4f50e7711c9"
       },
       "outputs": [
         {
@@ -1686,10 +1686,10 @@
       "id": "d4c5fd77-9656-43e5-8fe2-be7dca23eb6d",
       "metadata": {
         "id": "d4c5fd77-9656-43e5-8fe2-be7dca23eb6d",
-        "outputId": "d8d9254c-c529-4670-b642-4b08f7afa4bc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d8d9254c-c529-4670-b642-4b08f7afa4bc"
       },
       "outputs": [
         {
@@ -1728,38 +1728,69 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "id": "06a33fba-c6b1-4989-90f4-b647d1fe1627",
       "metadata": {
         "id": "06a33fba-c6b1-4989-90f4-b647d1fe1627"
       },
       "outputs": [],
       "source": [
-        "# Write a Python function that returns the square of a number."
+        "# Write a Python function that returns the square of a number.\n",
+        "def square(number):\n",
+        "  return number **2\n",
+        "  result=square(5)\n",
+        "  print(result)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "id": "91d90a4a-7329-45db-893b-caed8450ba96",
       "metadata": {
         "id": "91d90a4a-7329-45db-893b-caed8450ba96"
       },
       "outputs": [],
       "source": [
-        "# Write a Python function that accepts two parameters and returns their sum."
+        "# Write a Python function that accepts two parameters and returns their sum.\n",
+        "def add (a,b):\n",
+        "  return a+b\n",
+        "  result=add(3,7)\n",
+        "  print(result)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "id": "dec2f9a5-90c5-478b-890b-0a506ecf45d3",
       "metadata": {
-        "id": "dec2f9a5-90c5-478b-890b-0a506ecf45d3"
+        "id": "dec2f9a5-90c5-478b-890b-0a506ecf45d3",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        },
+        "outputId": "0a1be843-6ed2-4618-c08f-9d0bb7869333"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndentationError",
+          "evalue": "unexpected indent (<ipython-input-34-98f758327ab3>, line 2)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-34-98f758327ab3>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    def is_prime(number):\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python function to check if a given number is prime."
+        "# Write a Python function to check if a given number is prime.\n",
+        " def is_prime(number):\n",
+        "    if number <= 1:\n",
+        "        return False\n",
+        "    for i in range(2, int(number ** 0.5) + 1):\n",
+        "        if number % i == 0:\n",
+        "            return False\n",
+        "    return True\n",
+        " print(is_prime(7))\n",
+        "print(is_prime(10))"
       ]
     },
     {
