--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -1072,7 +1072,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "a0333c26-8e19-4c71-9722-d32cf8625ef6",
       "metadata": {
         "id": "a0333c26-8e19-4c71-9722-d32cf8625ef6",
@@ -1099,7 +1099,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "5a23046d-80b0-4f8d-a02f-4e3d833c0443",
       "metadata": {
         "id": "5a23046d-80b0-4f8d-a02f-4e3d833c0443",
@@ -1126,7 +1126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "9939c2d2-90fd-4e80-81bc-227c72e60e37",
       "metadata": {
         "id": "9939c2d2-90fd-4e80-81bc-227c72e60e37",
@@ -1153,7 +1153,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "aa287db8-057b-48d4-a6d8-18cc53eb7178",
       "metadata": {
         "id": "aa287db8-057b-48d4-a6d8-18cc53eb7178",
@@ -1181,7 +1181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "da9ba926-0ab5-46e9-b66d-128088c3225b",
       "metadata": {
         "id": "da9ba926-0ab5-46e9-b66d-128088c3225b",
@@ -1212,7 +1212,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "9601b6e4-cb90-4e1f-87b4-38ed37076e0d",
       "metadata": {
         "id": "9601b6e4-cb90-4e1f-87b4-38ed37076e0d",
@@ -1242,7 +1242,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "9d8e7311-81de-4da2-826c-c4dcad28ed9f",
       "metadata": {
         "id": "9d8e7311-81de-4da2-826c-c4dcad28ed9f",
@@ -1270,7 +1270,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "09e5121b-97b3-42e4-8025-f28f3470681b",
       "metadata": {
         "id": "09e5121b-97b3-42e4-8025-f28f3470681b",
@@ -1298,7 +1298,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "b774b741-e9a6-45db-8f00-e6d9b734d03a",
       "metadata": {
         "id": "b774b741-e9a6-45db-8f00-e6d9b734d03a",
@@ -1328,7 +1328,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "5ce4fd2b-ab16-4b40-9ac2-d19c244d8d96",
       "metadata": {
         "id": "5ce4fd2b-ab16-4b40-9ac2-d19c244d8d96",
@@ -1354,7 +1354,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "5c04f880-6e96-4ef4-9f4b-df21aae76ff1",
       "metadata": {
         "id": "5c04f880-6e96-4ef4-9f4b-df21aae76ff1",
@@ -1384,7 +1384,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "d5192acc-27f3-456e-9c72-3b276a587bf5",
       "metadata": {
         "id": "d5192acc-27f3-456e-9c72-3b276a587bf5",
@@ -1414,7 +1414,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "43f0a340-9407-4302-af7e-4e63db578bbf",
       "metadata": {
         "id": "43f0a340-9407-4302-af7e-4e63db578bbf",
@@ -1445,7 +1445,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "46e96e29-2157-4b9f-bb24-0bd973eada9f",
       "metadata": {
         "id": "46e96e29-2157-4b9f-bb24-0bd973eada9f",
@@ -1478,7 +1478,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "d81a803b-fd80-403e-9ae3-680ef44a3d86",
       "metadata": {
         "id": "d81a803b-fd80-403e-9ae3-680ef44a3d86",
@@ -1509,7 +1509,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "7432174b-fe75-4371-b23a-e2c5d62edb15",
       "metadata": {
         "id": "7432174b-fe75-4371-b23a-e2c5d62edb15",
@@ -1542,7 +1542,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "000b3260-d91f-41f2-9729-4b0124f2c4d2",
       "metadata": {
         "id": "000b3260-d91f-41f2-9729-4b0124f2c4d2",
@@ -1577,7 +1577,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "id": "c4b1a942-818e-42c1-b742-1fabe80fca6d",
       "metadata": {
         "id": "c4b1a942-818e-42c1-b742-1fabe80fca6d",
@@ -1612,7 +1612,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "id": "a78f1070-3ff3-436a-8391-153f019f53cd",
       "metadata": {
         "id": "a78f1070-3ff3-436a-8391-153f019f53cd",
@@ -1650,7 +1650,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "id": "fcba0267-8cc4-4e89-9e78-2d820916c177",
       "metadata": {
         "id": "fcba0267-8cc4-4e89-9e78-2d820916c177",
@@ -1682,7 +1682,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "id": "d4c5fd77-9656-43e5-8fe2-be7dca23eb6d",
       "metadata": {
         "id": "d4c5fd77-9656-43e5-8fe2-be7dca23eb6d",
@@ -1727,24 +1727,24 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 32,
-      "id": "06a33fba-c6b1-4989-90f4-b647d1fe1627",
-      "metadata": {
-        "id": "06a33fba-c6b1-4989-90f4-b647d1fe1627"
-      },
-      "outputs": [],
       "source": [
         "# Write a Python function that returns the square of a number.\n",
         "def square(number):\n",
         "  return number **2\n",
         "  result=square(5)\n",
         "  print(result)"
-      ]
+      ],
+      "cell_type": "code",
+      "metadata": {
+        "id": "Wzh6I1J512UN"
+      },
+      "id": "Wzh6I1J512UN",
+      "execution_count": 4,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "id": "91d90a4a-7329-45db-893b-caed8450ba96",
       "metadata": {
         "id": "91d90a4a-7329-45db-893b-caed8450ba96"
@@ -1759,39 +1759,23 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 34,
-      "id": "dec2f9a5-90c5-478b-890b-0a506ecf45d3",
-      "metadata": {
-        "id": "dec2f9a5-90c5-478b-890b-0a506ecf45d3",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 106
-        },
-        "outputId": "0a1be843-6ed2-4618-c08f-9d0bb7869333"
-      },
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "IndentationError",
-          "evalue": "unexpected indent (<ipython-input-34-98f758327ab3>, line 2)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-34-98f758327ab3>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    def is_prime(number):\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
-          ]
-        }
-      ],
       "source": [
         "# Write a Python function to check if a given number is prime.\n",
-        " def is_prime(number):\n",
+        "def is_prime(number):\n",
         "    if number <= 1:\n",
         "        return False\n",
         "    for i in range(2, int(number ** 0.5) + 1):\n",
         "        if number % i == 0:\n",
         "            return False\n",
-        "    return True\n",
-        " print(is_prime(7))\n",
-        "print(is_prime(10))"
-      ]
+        "    return True"
+      ],
+      "cell_type": "code",
+      "metadata": {
+        "id": "_nH2V7Yy2EvR"
+      },
+      "id": "_nH2V7Yy2EvR",
+      "execution_count": 7,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1807,14 +1791,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "id": "84a2d010-e7b2-409b-b1f4-99bf806bb77a",
       "metadata": {
         "id": "84a2d010-e7b2-409b-b1f4-99bf806bb77a"
       },
       "outputs": [],
       "source": [
-        "# Write a Python function to calculate the power of a number using recursion."
+        "# Write a Python function to calculate the power of a number using recursion.def power(x, n):\n",
+        "def power(x, n):\n",
+        "  if n == 0:\n",
+        "    return 1\n",
+        "  else:\n",
+        "    return x * power(x, n - 1)"
       ]
     },
     {
@@ -2011,26 +2000,59 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "id": "0aac8430-5d77-439d-9a99-9598fadf989c",
       "metadata": {
-        "id": "0aac8430-5d77-439d-9a99-9598fadf989c"
+        "id": "0aac8430-5d77-439d-9a99-9598fadf989c",
+        "outputId": "20a43407-beab-4213-9c2f-ce9dd329b50f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndentationError",
+          "evalue": "unexpected indent (<ipython-input-11-3c514d1137ef>, line 3)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-3c514d1137ef>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    doubled_numbers = list(map(lambda x: x * 2, numbers))\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to multiply all numbers in a list by 2 using a lambda function inside map()."
+        "# Write a Python program to multiply all numbers in a list by 2 using a lambda function inside map().\n",
+        "numbers = [1, 2, 3, 4, 5]\n",
+        "   doubled_numbers = list(map(lambda x: x * 2, numbers))\n",
+        "   print(doubled_numbers)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "id": "e4cd5ba8-c6ec-4f0d-8787-bf0a4b7a2e22",
       "metadata": {
-        "id": "e4cd5ba8-c6ec-4f0d-8787-bf0a4b7a2e22"
+        "id": "e4cd5ba8-c6ec-4f0d-8787-bf0a4b7a2e22",
+        "outputId": "91a04019-47e6-41f3-8026-78cf55c548c3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "List after removing all occurrences of 20 : [10, 30, 40, 50]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to remove all occurrences of a specific element from a list."
+        "# Write a Python program to remove all occurrences of a specific element from a list.\n",
+        "numbers = [10, 20, 30, 20, 40, 20, 50]\n",
+        "element_to_remove = 20\n",
+        "numbers = [num for num in numbers if num != element_to_remove]\n",
+        "print(\"List after removing all occurrences of\", element_to_remove, \":\", numbers)"
       ]
     },
     {
